examples/test/testpolicy13327.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13327
  namespace: namespace306
spec:
  podSelector:
    matchLabels:
      key16: value1
      key0: value27
      key7: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value37
          key28: value45
          key36: value38
      podSelector:
        matchLabels:
          key20: value20
          key12: value20
